--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-httpx = "^0.20.0"
+httpx = ">0.21.0,<1"
 
 [tool.poetry.dev-dependencies]
-black = "^21.9b0"
+black = "^21.12b0"
 pytest = "^6.2.5"
-pytest-httpx = "^0.14.0"
+pytest-httpx = "^0.17.0"
 pytest-asyncio = "^0.15.1"
 
 [build-system]
