--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ "3.9", "3.10" ]
+        python-version: [ "3.9", "3.10", "3.11" ]
 
     steps:
     - name: Checkout
@@ -48,3 +48,6 @@ jobs:
       run: |
         source .venv/bin/activate
         pytest tests/
+
+    - name: Black Code Formatter
+      uses: jpetrucciani/black-check@22.12.0
